Mockito dependency tilføjet + ShiftController klasse tests